fix: change divs width that made login and register views work bad on mobile devices

--- a/src/common/MyInput/MyInput.css
+++ b/src/common/MyInput/MyInput.css
@@ -3,7 +3,7 @@
   height: 7vh;
 
   border-radius: 0.3em;
-  border: 0.2em solid rgb(31, 115, 240);
+  border: 0.1em solid rgb(31, 115, 240);
   font-size: 1rem;
 }
 
