--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -13,5 +13,5 @@
 
 .separator {
   height: 2em;
-  width: 100vh;
+  width: 100%;
 }
