--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -13,7 +13,7 @@
 
 .separator {
   height: 2em;
-  width: 100vh;
+  width: 100%;
 }
 
 .fieldEr {
